go reports-service: Version the API and add params validation
